css and hmtl updates to to header menu button dropdown to correct overflow hidden issue

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -300,6 +300,10 @@ nav.footer li a:hover {
   line-height: 2.75;
 }
 
+.showHeaderDropDown {
+  overflow-y: auto;  
+}
+
 @media screen and (max-width: 400px) {
 
   .mobileHide {
